--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -158,12 +158,13 @@ h2 {
 }
 
 #titre{
-  width: calc(100% - 10px);
+  width:100%; /* calc(100% - 10px); */
   height: 30px;
   position: relative;
   top: 10px;
-  left: 10px;
+  /* left: 10px; */
   font-size: 20px;
+  text-align: center;
 }
 
 #tabs{
